# RCARP

./: .env  .env.example  .gitignore  README.md  app.db.sqbpro  app.py  database.js  index.html  pyproject.toml  requirements.txt
data/: clientes_mensais.csv  estoque_avancado.csv
static/css/: style.css
templates/: index.html
